--- a/Integration/Integration.csproj
+++ b/Integration/Integration.csproj
@@ -8,4 +8,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ZooKeeperNetEx" Version="3.4.12.4" />
+  </ItemGroup>
+
 </Project>
